--- a/src/app/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/posts/post-dashboard/post-dashboard.component.html
@@ -27,7 +27,7 @@
                 <textarea matInput placeholder="Post Title" [(ngModel)]="content" rows="10"> </textarea>
             </mat-form-field>
             <br>
-            <button mat-raised-button color="accent" (click)="createPost()" [disabled] ="!title || !content"> {{buttonText}}</button>
+            <button mat-raised-button color="accent" (click)="createPost()" [disabled] ="!title || !content || !image"> {{buttonText}}</button>
 
         </mat-expansion-panel>
     </mat-accordion>
