--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-        <span routerLink="/blog">ng-blog</span>
+        <span routerLink="/blog">Growth Blog</span>
         <span class="spacer"> </span>
         <div *ngIf="auth.afAuth.authState | async as user; else showLogin"> 
             <button mat-raised-button color="accent" routerLink="/dashboard"> Write a Post </button>
